# mcp-smoke

./: README.md  pyproject.toml
examples/: echo_scenario.json  echo_server.py  flaky_budget_fail.json  flaky_budget_pass.json  flaky_server.py  http_echo_scenario.json  missing_tool_scenario.json
src/mcp_smoke/: cli.py
tests/: test_cli.py
